[project]
name = "yt-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "python-dotenv>=1.1.1",
    "pytube>=15.0.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
    "youtube-transcript-api>=1.2.2",
]
